<resources>
    <string name="app_name">Gina FI</string>
    <string name="save_and_earn">Save and earn more!</string>
    <string name="login">Login</string>
    <string name="create_Account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login_from_signup">Already have an account? Login</string>
    <string name="signup_from_login">Don\'t have an account? Signup</string>
    <string name="take_photo">Take Profile Photo</string>
    <string name="capture">Capture</string>
    <string name="save">Save</string>
    <string name="hello_message">Hello, %1$s. </string>
    <string name="quick_save">Quick Save</string>
    <string name="quick_save_text">Enter an amount you wish to save and your card details</string>
    <string name="total_savings">Total Savings</string>
    <string name="savings_interest">Savings + Interest</string>
    <string name="total_withdrawals">Total Withdrawals</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="more_activities">View More Activities</string>
    <string name="menu_home">Home</string>
    <string name="menu_save">Save</string>
    <string name="menu_withdraw">Withdraw</string>
    <string name="menu_logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">$ %1$.2f</string>
    <string name="total_withdrawal">%1$d</string>
    <string name="amount_text">Amount</string>
    <string name="card_number">Card Number</string>
    <string name="card_name">Name on Card</string>
    <string name="card_cvv">CVV</string>
    <string name="card_exp">Expiry (MM/YY)</string>
    <string name="text_withdraw">Withdraw</string>
    <string name="text_withdraw_description">Enter an amount you wish to withdraw and the account to receive the money</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="bank">Bank</string>
    <string name="transaction_date">Date: %1$s</string>
    <string name="add_account">Add Account</string>
    <string name="add_account_description">Add account you wish to withdraw into</string>
    <string name="profile">Profile</string>
    <string name="accounts">Accounts</string>
    <string name="contact_text">To update your profile please contact us on 3062162024, info@ginafi.app</string>
    <string name="preference_file_key">ginaFiPref</string>
    <string name="is_logged_in">isLoggedIn</string>
</resources>